--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>J.V.P</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RP46VKGN5L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RP46VKGN5L');
+</script>
 </head>
 
 <body>
